views: use corner radius for vertical margins on menus if set

If a menu has rounded corners, the vertical margin should always be exactly the
radius of that corner, to avoid visual glitches when the top or bottom items
are highlighted.

Bug: 868037
Change-Id: Iab35de0b5be4152da1f24927c4a7f6bdef92a0d9
Reviewed-on: https://chromium-review.googlesource.com/1161101
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580870}
Former-commit-id: 41f1bd9fcb37c0eec31bcf7c31d565615e0f408f